# win-ai

./: CMakeLists.txt  README.md  main.cpp  train_classifier.cpp  wgen.cpp
lib/: args_parser.h  classifier_data.h  macros.h  process.h  timer.h  train_classifier.cpp  util.h
lib/classification/: classifier_data.h  command_resolver.h  commands.h  intent_classifier.h  intent_resolver.h  intent_trainer.h
lib/intents/_unused/: action.txt  object.txt
lib/intents/_unused/browser/: browser.txt
lib/intents/_unused/chat/: chat.txt
lib/intents/_unused/file/: file.txt
lib/intents/_unused/notepad/: notepad.txt
lib/intents/action/: close.txt  create.txt  navigate.txt  open.txt  read.txt
lib/intents/object/: browser.txt  file.txt  process.txt
lib/lex_parser/: CMakeLists.txt  lex_parser.h  lex_string_util.h  lex_util.h
lib/thread/: CMakeLists.txt  thread_pool.h
lib/types/: action.h  assistant.h  definitions.h  intent.h  object.h
lib/types/AI/: action.h  action_registry.h  intent.h  intent_handler.h  intent_handler_registry.h
lib/types/AI/actions/: browser_actions.h  file_actions.h
lib/types/AI/domain/: browser.h  browser_intent_handler.h  file_intent_handler.h
lib/wgen/: CMakeLists.txt  lex_parser.h  lex_string_util.h  lex_types.h  lex_util.h  wgen.cpp
test/: CMakeLists.txt  main.cpp
